<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.WelcomeActivity">


        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/carwelcome" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:src="@drawable/logo_vehicle"/>

      <!--  <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/car_welcom">

        </com.airbnb.lottie.LottieAnimationView>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/explore_new_ways"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/green"
                android:text="@string/continue_with_phone_number"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="7dp" />

            <TextView
                android:id="@+id/tvTermPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/terms_condition_privacy_policy"
                android:textColor="@color/shadow_dark"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</layout>