<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:backgroundTint="@color/white"
        tools:context=".activity.PhoneVerifyActivity">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="-5dp"
            android:src="@drawable/back_arrow"
            android:visibility="gone"
            app:tint="@color/sky"
            android:contentDescription=""
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvPhoneVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivBack"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:text="@string/phone_number_for_verification"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="Name as per Aadhar"
            android:paddingStart="15dp"
            android:background="@drawable/edittext_bg"
            android:layout_below="@+id/tvPhoneVerify"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/etName"
            android:text="@string/please_provide_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/tvDescription"
            android:background="@drawable/edittext_bg"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countryCode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textSize="20dp"
                android:text="+91"/>

            <TextView
                android:layout_width="10dp"
                android:layout_height="40dp"
                android:textColor="@color/shadow_dark"
                android:gravity="center_vertical"
                android:textSize="40dp"
                android:text="|"/>

            <EditText
                android:id="@+id/etPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="5dp"
                android:cursorVisible="true"
                android:hint="Phone  as per Aadhar/Email id"
                android:background="@color/white"
                android:layout_below="@+id/tvDescription"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvAadharlink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="Please provide aadhar link mobile number for KYC"
            android:textColor="@color/black"
            android:textSize="14sp" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendOTP"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/tvAadharlink"
            android:layout_marginTop="31dp"
            android:backgroundTint="@color/green"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/send_otp"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="7dp" />

        <TextView
            android:id="@+id/tvAlreadyAccount"
            android:layout_below="@+id/btnSendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="Already Have An Account ? "/>
        <TextView
            android:id="@+id/btnLogin"
            android:layout_below="@+id/btnSendOTP"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tvAlreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sky"
            android:textSize="14sp"
            android:text="Login"/>


       <!-- <com.hbb20.CountryCodePicker
            android:id="@+id/countryCode"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/tvDescription"
            android:layout_gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_defaultNameCode="IND"
            app:ccp_showFlag="true"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/tvDescription"
            android:layout_toEndOf="@+id/countryCode"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_height="60dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_phone_number"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
-->


    </RelativeLayout>
</layout>